--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-  <title>To-Do list</title>
+  <title>teacher to-do</title>
 </head>
 <body>
-  <div id="'root"></div>
+  <div id="root"></div>
 </body>
 </html>
